--- a/style.css
+++ b/style.css
@@ -405,15 +405,15 @@ body {
 
 .myworks {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
-  max-lines: 10%;
-  margin-top: 8rem;
+  margin: 7rem auto 2rem auto;
   padding: 0 5% 0 10%;
+  gap: 2%;
 }
 .imges {
   border-radius: 5%/10%;
-  width: 80%;
+  width: 100%;
 }
 
 .sixthpart {
@@ -744,7 +744,6 @@ input:focus::placeholder {
 
   .myworks {
     grid-template-columns: auto;
-    margin-left: 10%;
   }
 
   .site1,
@@ -757,11 +756,12 @@ input:focus::placeholder {
   }
 
   .futcaro {
-    display: block;
+    display: flex;
     position: relative;
-    width: 50%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
+    overflow-x: scroll;
   }
 
   .caro1,
@@ -772,7 +772,6 @@ input:focus::placeholder {
   }
 
   footer {
-    margin-top: 100%;
     height: 600px;
     padding: 30px;
   }
@@ -877,11 +876,11 @@ input:focus::placeholder {
   }
 
   .caro3 {
-    display: none;
+   /*  display: none; */
   }
 
   .star {
-    display: none;
+    /* display: none; */
   }
 
   footer {
