--- a/style.css
+++ b/style.css
@@ -846,6 +846,15 @@ input:focus::placeholder {
     height: 300px;
   }
 
+  .circledot {
+    width: 15px;
+    height: 15px;
+    background-color: rgb(153, 191, 255);
+    border-radius: 50%;
+    padding: 3.75px;
+    margin: auto;
+  }
+
   .secondpart {
     padding-top: 300px;
   }
