Fixed the part 5 underlapping problem for mobile devices

--- a/style.css
+++ b/style.css
@@ -874,6 +874,10 @@ input:focus::placeholder {
     margin-bottom: 100px;
   }
 
+  .fourthpart {
+    height: 1300px;
+  }
+
   .testimonyme {
     text-align: center;
     width: 70%;
