Added a contact-me.html, and contact-style.css This makes reference to the new contact page, it is done and well reactive on all mobile screens, the navbar uses the same style sheet and its all imported

--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body {
   white-space: nowrap;
 }
 
+.linkst{
+  text-decoration: none;
+  color: var(--WTXT);
+}
+
 .navoneli {
   margin-left: 10%;
   font-size: 12px;
