--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html,
@@ -41,6 +41,11 @@ body {
 .linkst {
   text-decoration: none;
   color: var(--WTXT);
+}
+
+.linkblack{
+  text-decoration: none;
+  color: black;
 }
 
 .navoneli {
@@ -222,31 +227,45 @@ body {
   color: white;
 }
 
-.remlc{
-  text-decoration: none;
-  color: black;
-}
 .container{
-  width: 700px;
-  margin: 30px auto ;
+  width: 330px;
   border-radius: 20px;
   background-color: white;
   display: flex;
-  height: 200px;
+  flex-direction: column;
+  height: 500px;
   overflow: hidden;
-
+  cursor: pointer;
 }
 
-.container:hover>.bimg{
+.container:hover>a>.bimg{
   animation: bimgh 0.2s ease-in forwards;
 }
 
+.container:hover{
+  box-shadow: 0px 0px 10px rgb(88, 88, 88);
+}
+
+.blogflex{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.blogflex:last-child{
+
+  align-self: flex-start;
+}
 
 
 .bimg{
-  height: 100%;
-  border-top-left-radius: inherit;
-  border-bottom-left-radius: inherit;
+  height: 50%;
+  width: fit-content;
+
 }
 
 .btext{
@@ -810,15 +829,6 @@ input:focus::placeholder {
     height: 1200px;
   }
 
-  .container{
-    width: 500px;
-    height: 150px;
-    overflow: hidden;
-  }
-
-  .bimg{
-    width: 150px;
-  }
 
   .circledot {
     width: 15px;
@@ -920,9 +930,7 @@ input:focus::placeholder {
 }
 
 @media only screen and (max-width: 520px) {
-  .container{
-    width: 400px;
-  }
+
 
   .btopic{
     font-size: 15px;
@@ -935,13 +943,6 @@ input:focus::placeholder {
     padding-right: 5%;
   }
 
-  .container{
-    width: 300px;
-  }
-
-  .bmtext{
-    display: none;
-  }
 
   .btext{
     display: flex;
@@ -1055,16 +1056,5 @@ input:focus::placeholder {
   .lithree {
     margin-top: 50px;
   }
-}
 
-
-@media only screen and (max-width: 330px) {
-  .container{
-    width: 95%;
-    height: 100px;
-  }
-
-  .bimg{
-    width: 40%;
-  }
 }
