--- a/style.css
+++ b/style.css
@@ -236,11 +236,14 @@ body {
   height: 500px;
   overflow: hidden;
   cursor: pointer;
+  position: relative;
 }
 
-.container:hover>a>.bimg{
+
+
+/* .container:hover>a>img{
   animation: bimgh 0.2s ease-in forwards;
-}
+} */
 
 .container:hover{
   box-shadow: 0px 0px 10px rgb(88, 88, 88);
@@ -263,9 +266,9 @@ body {
 
 
 .bimg{
-  height: 50%;
-  width: fit-content;
-
+  width:100%;
+  height:80%;
+  object-fit:cover;
 }
 
 .btext{
@@ -274,6 +277,7 @@ body {
   flex-direction: column;
   gap: 10px;
   width: 100%;
+  height: 0px;
 }
 
 .loadout3b {
@@ -943,11 +947,6 @@ input:focus::placeholder {
     padding-right: 5%;
   }
 
-
-  .btext{
-    display: flex;
-    justify-content: center;
-  }
 
   .secondpart {
     padding-top: 0px;
